<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/typeOfDishTextView"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/typeOfDishText"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/typeOfDishSpinner"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:entries="@array/typesOfDish"
        app:layout_constraintStart_toEndOf="@+id/typeOfDishTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/optionTextView"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/optionText"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeOfDishTextView" />

    <Spinner
        android:id="@+id/optionsSpinner"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:entries="@array/mainCourseOptions"
        app:layout_constraintStart_toEndOf="@+id/optionTextView"
        app:layout_constraintTop_toBottomOf="@+id/typeOfDishSpinner" />

    <Button
        android:id="@+id/addToOrderButton"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="108dp"
        android:textColor="@color/black"
        android:text="@string/addToOrderButton"
        app:layout_constraintEnd_toStartOf="@+id/finishButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderCostValueTextView" />

    <EditText
        android:id="@+id/quantityEditText"
        android:layout_width="345dp"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="68dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/quantityEditTextHint"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/extraTextView" />

    <TextView
        android:id="@+id/sizeTextView"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/sizeTextView"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/optionTextView" />

    <Spinner
        android:id="@+id/sizeSpinner"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:entries="@array/sizeOptions"
        app:layout_constraintStart_toEndOf="@+id/sizeTextView"
        app:layout_constraintTop_toBottomOf="@+id/optionsSpinner" />

    <TextView
        android:id="@+id/extraTextView"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/extrasTextView"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sizeTextView" />

    <Spinner
        android:id="@+id/extraSpinner"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:entries="@array/extraOptions"
        app:layout_constraintStart_toEndOf="@+id/extraTextView"
        app:layout_constraintTop_toBottomOf="@+id/sizeSpinner" />

    <Button
        android:id="@+id/finishButton"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="24dp"
        android:textColor="@color/black"
        android:text="@string/finishOrderButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalCostValueTextView" />

    <TextView
        android:id="@+id/orderCostTextView"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="44dp"
        android:text="@string/orderPriceTextView"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantityEditText" />

    <TextView
        android:id="@+id/orderCostValueTextView"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="36dp"
        android:text="@string/initPrice"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderCostTextView" />

    <TextView
        android:id="@+id/totalCostTextView"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="40dp"
        android:text="@string/costTextView"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantityEditText" />

    <TextView
        android:id="@+id/totalCostValueTextView"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="48dp"
        android:text="@string/initPrice"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.825"
        app:layout_constraintStart_toEndOf="@+id/orderCostValueTextView"
        app:layout_constraintTop_toBottomOf="@+id/totalCostTextView" />


</androidx.constraintlayout.widget.ConstraintLayout>